fix dark mode table visibility

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ table {
   margin-top: 0.5rem;
 }
 tr:nth-last-child(even) {
-  background-color: rgb(239, 239, 239);
+  background-color: rgba(182, 179, 179, 0.635);
 }
 th, td {
   border: 1px solid #ddd;
